--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>BudgetFire</title>
-  <base href="/">
+  <base href="/home">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
+
+  <!--&lt;!&ndash; The core Firebase JS SDK is always required and must be listed first &ndash;&gt;-->
+  <!--<script src="../firebase/5.11.1/firebase-app.js"></script>-->
+
+  <!--&lt;!&ndash; TODO: Add SDKs for Firebase products that you want to use-->
+       <!--https://firebase.google.com/docs/web/setup#reserved-urls &ndash;&gt;-->
+
+  <!--&lt;!&ndash; Initialize Firebase &ndash;&gt;-->
+  <!--<script src="../firebase/init.js"></script>-->
+  <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
 </body>
 </html>
