--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,6 @@
   <!--&lt;!&ndash; Initialize Firebase &ndash;&gt;-->
   <!--<script src="../firebase/init.js"></script>-->
   <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
+  <script src="node_modules/chart.js/src/chart.js"></script>
 </body>
 </html>
