--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
@@ -22,7 +24,7 @@
 
   <!--&lt;!&ndash; Initialize Firebase &ndash;&gt;-->
   <!--<script src="../firebase/init.js"></script>-->
-  <script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>
+  <!--<script src="https://unpkg.com/ionicons@4.4.2/dist/ionicons.js"></script>-->
   <script src="node_modules/chart.js/src/chart.js"></script>
 </body>
 </html>
